--- a/index.html
+++ b/index.html
@@ -522,8 +522,8 @@
                   <i class="fa fa-check text-success me-3"></i>Email Support
                 </p>
                 <a class="btn-slide mt-2" href=""
-                  ><i class="fa fa-arrow-right"></i><span></span
-                ></a>
+                  ><i class="fa fa-arrow-right"></i><span>Order Now</span></a
+                >
               </div>
             </div>
           </div>
@@ -569,8 +569,8 @@
                   Support
                 </p>
                 <a class="btn-slide mt-2" href=""
-                  ><i class="fa fa-arrow-right"></i><span></span
-                ></a>
+                  ><i class="fa fa-arrow-right"></i><span>Order Now</span></a
+                >
               </div>
             </div>
           </div>
@@ -817,12 +817,14 @@
                 style="width: 80px; height: 80px"
               />
               <div class="ms-4">
-                <h5 class="mb-1"> Sarah Johnson</h5>
+                <h5 class="mb-1">Sarah Johnson</h5>
                 <p class="m-0">Profession</p>
               </div>
             </div>
             <p class="mb-0">
-              Working with X-Team has been a game-changer for my business. Their efficient logistics solutions have saved us time and money, and their customer service is top-notch. Highly recommended!"
+              Working with X-Team has been a game-changer for my business. Their
+              efficient logistics solutions have saved us time and money, and
+              their customer service is top-notch. Highly recommended!"
             </p>
           </div>
           <div class="testimonial-item p-4 my-5">
@@ -841,7 +843,10 @@
               </div>
             </div>
             <p class="mb-0">
-              "As a small business owner, I rely on X-Team for all my shipping needs. Their attention to detail and dedication to delivering on time has been impressive. They truly go above and beyond to ensure customer satisfaction."
+              "As a small business owner, I rely on X-Team for all my shipping
+              needs. Their attention to detail and dedication to delivering on
+              time has been impressive. They truly go above and beyond to ensure
+              customer satisfaction."
             </p>
           </div>
           <div class="testimonial-item p-4 my-5">
@@ -860,7 +865,11 @@
               </div>
             </div>
             <p class="mb-0">
-              "X-Team has consistently exceeded our expectations. Their team's professionalism and commitment to providing reliable transportation solutions have been invaluable to our supply chain management. I wouldn't hesitate to recommend them to anyone in need of logistics services."
+              "X-Team has consistently exceeded our expectations. Their team's
+              professionalism and commitment to providing reliable
+              transportation solutions have been invaluable to our supply chain
+              management. I wouldn't hesitate to recommend them to anyone in
+              need of logistics services."
             </p>
           </div>
           <div class="testimonial-item p-4 my-5">
@@ -879,7 +888,11 @@
               </div>
             </div>
             <p class="mb-0">
-             "X-Team has consistently exceeded our expectations. Their team's professionalism and commitment to providing reliable transportation solutions have been invaluable to our supply chain management. I wouldn't hesitate to recommend them to anyone in need of logistics services."
+              "X-Team has consistently exceeded our expectations. Their team's
+              professionalism and commitment to providing reliable
+              transportation solutions have been invaluable to our supply chain
+              management. I wouldn't hesitate to recommend them to anyone in
+              need of logistics services."
             </p>
           </div>
         </div>
