--- a/price.html
+++ b/price.html
@@ -174,8 +174,8 @@
                   <i class="fa fa-check text-success me-3"></i>Email Support
                 </p>
                 <a class="btn-slide mt-2" href=""
-                  ><i class="fa fa-arrow-right"></i><span></span
-                ></a>
+                  ><i class="fa fa-arrow-right"></i><span>Order Now</span></a
+                >
               </div>
             </div>
           </div>
@@ -221,8 +221,8 @@
                   Support
                 </p>
                 <a class="btn-slide mt-2" href=""
-                  ><i class="fa fa-arrow-right"></i><span></span
-                ></a>
+                  ><i class="fa fa-arrow-right"></i><span>Order Now</span></a
+                >
               </div>
             </div>
           </div>
